--- a/user-detail-student.html
+++ b/user-detail-student.html
@@ -166,6 +166,16 @@
       outline: none;
       transition: border-color 0.3s ease;
       background-color: #f8f9fa;
+
+      /* nambahanin ini agar tampilan mobile diberbagai browser compatible */
+      appearance: none;
+      -webkit-appearance: none;
+    }
+
+    /* ini juga ditambahkan agar tampilan mobile diberbagai browser compatible */
+    .form-input::-webkit-date-and-time-value {
+      text-align: left;
+      padding-left: 4px;
     }
 
     .form-input:focus {
