--- a/user-detail-student.html
+++ b/user-detail-student.html
@@ -163,8 +163,8 @@
       font-size: 16px;
       border: 2px solid #e0e0e0;
       border-radius: 12px;
-      outline: none;
-      transition: border-color 0.3s ease;
+      /* outline: none; */
+      /* transition: border-color 0.3s ease; */
       background-color: #f8f9fa;
 
       /* nambahanin ini agar tampilan mobile diberbagai browser compatible */
@@ -602,10 +602,15 @@
 
             <div class="form-group">
               <input
-                type="date"
+                type="text"
+                id="dob"
                 class="form-input"
                 placeholder="Date of Birth: DD/MM/YYYY"
+                readonly
               />
+
+              <!-- real date input, hidden -->
+              <input type="date" id="realDate" style="display: none" />
             </div>
 
             <div class="form-group">
@@ -628,5 +633,16 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
+    <script>
+      const dob = document.getElementById("dob");
+      const realDate = document.getElementById("realDate");
+
+      dob.addEventListener("click", () => realDate.showPicker());
+
+      realDate.addEventListener("change", () => {
+        const [y, m, d] = realDate.value.split("-");
+        dob.value = `${d}/${m}/${y}`;
+      });
+    </script>
   </body>
 </html>
